codegen/ui_tests/rhai_mod_inner_cfg_false.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error[E0433]: failed to resolve: could not find `test_mod` in `test_module`
  --> ui_tests/rhai_mod_inner_cfg_false.rs:24:21
   |
24 |     if test_module::test_mod::test_fn(n) {
   |                     ^^^^^^^^ could not find `test_mod` in `test_module`
